[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/sprites/scarecrow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyFSM.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 60, 30, 30, 30 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 30, 30, 30 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 30, 30, 30, 30 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 60, 30, 30, 30 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), null ],
"loop": true,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 6 ) ],
"loop": false,
"name": "getHit",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 17.6488, 44.3007 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 33.3724, 42.6545 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2147483653
script = ExtResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body"]
scale = Vector2( 3, 3 )
frames = SubResource( 7 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.85116, 1.73886 )
shape = SubResource( 8 )

[node name="player_checker_right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 300, 0 )
collide_with_areas = true

[node name="player_checker_left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -300, 0 )
collide_with_areas = true

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 70 )
collision_mask = 2
collide_with_areas = true

[node name="hit_checker" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_checker"]
position = Vector2( 0.547144, 1.21639 )
shape = SubResource( 9 )

[node name="Receive_hit" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="body_entered" from="hit_checker" to="." method="_on_hit_checker_body_entered"]
[connection signal="timeout" from="Receive_hit" to="." method="_on_Receive_hit_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
